package LSControlProto;

enum Opcode{
	PKG_NONE = 0;
	PKG_RegistAccountReq = 1;
	PKG_RegistAccountAck = 2;
}

message LSCHead{
	required uint32 opcode = 1;
}

message LSCRegistAccountReq{
	required string account  = 1;
	required string password  = 2;
}

message LSCRegistAccountAck{
	required bool result  = 1;
}